--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@solana/web3.js": "^1.98.0",
     "bip39": "^3.1.0",
+    "dotenv": "^16.4.7",
     "ed25519-hd-key": "^1.3.0",
     "ethers": "^6.13.5",
     "react": "^19.0.0",
